--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,13 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     color: #aaa;
 }
 
+.unFavourite {
+    color: #fdfdfd !important;
+}
+
+
+
+
 
 
 
