--- a/src/app/apod/apod.component.css
+++ b/src/app/apod/apod.component.css
@@ -14,15 +14,19 @@
   }
 
   li{
-    margin: 20px;
+    margin: 25px;
   }
 
   .imag{
     box-shadow: 1px 1px 5px 1px #6d6565;
     width: 100%;
-    height: 80vh;
+    height: 60vh;
     border-radius: 1px;
 
+  }
+
+  .date{
+    text-align: center;
   }
 
 
@@ -53,4 +57,9 @@
 }
 
 
+.box{
+  padding: 20px;
+  border: 1px solid #f9f3f3;
+  box-shadow: 5px 5px 20px 5px #dedcdc;
+}
 
