--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,4 +17,151 @@
  <app-apod></app-apod>
 
 
+ <footer class="footer-area footer--light">
+   <div class="footer-big">
+     <!-- start .container -->
+     <div class="container">
+       <div class="row">
+        
+         <!-- end /.col-md-4 -->
+         <div class="col-md-3 col-sm-4">
+           <div class="footer-widget">
+             <div class="footer-menu footer-menu--1">
+               <h4 class="footer-widget-title">Popular Category</h4>
+               <ul>
+                 <li>
+                   <a href="#">Angular</a>
+                 </li>
+                 <li>
+                   <a href="#">Javascript</a>
+                 </li>
+                 <li>
+                   <a href="#">Css</a>
+                 </li>
+                 <li>
+                   <a href="#">Bootstrap</a>
+                 </li>
+                 <li>
+                   <a href="#">HTML </a>
+                 </li>
+               </ul>
+             </div>
+             <!-- end /.footer-menu -->
+           </div>
+           <!-- Ends: .footer-widget -->
+         </div>
+         <!-- end /.col-md-3 -->
  
+         <div class="col-md-3 col-sm-4">
+           <div class="footer-widget">
+             <div class="footer-menu">
+               <h4 class="footer-widget-title">Our Company</h4>
+               <ul>
+                 <li>
+                   <a href="#">About Us</a>
+                 </li>
+                 <li>
+                   <a href="#">How It Works</a>
+                 </li>
+                 <li>
+                   <a href="#">Affiliates</a>
+                 </li>
+                 <li>
+                   <a href="#">Testimonials</a>
+                 </li>
+                 <li>
+                   <a href="#">Contact Us</a>
+                 </li>
+                 <li>
+                   <a href="#">Plan &amp; Pricing</a>
+                 </li>
+                 <li>
+                   <a href="#">Blog</a>
+                 </li>
+               </ul>
+             </div>
+             <!-- end /.footer-menu -->
+           </div>
+           <!-- Ends: .footer-widget -->
+         </div>
+         <!-- end /.col-lg-3 -->
+ 
+         <div class="col-md-3 col-sm-4">
+           <div class="footer-widget">
+             <div class="footer-menu no-padding">
+               <h4 class="footer-widget-title">Help Support</h4>
+               <ul>
+                 <li>
+                   <a href="#">Support Forum</a>
+                 </li>
+                 <li>
+                   <a href="#">Terms &amp; Conditions</a>
+                 </li>
+                 <li>
+                   <a href="#">Support Policy</a>
+                 </li>
+                 <li>
+                   <a href="#">Refund Policy</a>
+                 </li>
+                 <li>
+                   <a href="#">FAQs</a>
+                 </li>
+                 <li>
+                   <a href="#">Buyers Faq</a>
+                 </li>
+                 <li>
+                   <a href="#">Sellers Faq</a>
+                 </li>
+               </ul>
+             </div>
+             <!-- end /.footer-menu -->
+           </div>
+           <!-- Ends: .footer-widget -->
+         </div>
+         <!-- Ends: .col-lg-3 -->
+
+
+         <div class="col-md-3 col-sm-12">
+            <div class="footer-widget">
+              <div class="widget-about">
+               
+                <ul class="contact-details">
+                  <li>
+                    <span class="icon-earphones"></span> Call Us:
+                    <a href="#">344-755-111</a>
+                  </li>
+                  <li>
+                    <span class="icon-envelope-open"></span>
+                    <a href="#">browntape@gmail.com</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <!-- Ends: .footer-widget -->
+          </div>
+
+ 
+       </div>
+       <!-- end /.row -->
+     </div>
+     <!-- end /.container -->
+   </div>
+   <!-- end /.footer-big -->
+ 
+   <div class="mini-footer">
+     <div class="container">
+       <div class="row">
+         <div class="col-md-12">
+           <div class="copyright-text">
+             <p>© 2021  
+               <a href="#">Browntape</a>. All rights reserved. Created by
+               <a href="#">zube</a>
+             </p>
+           </div>
+ 
+           
+         </div>
+       </div>
+     </div>
+   </div>
+ </footer>
