--- a/src/app/apod/apod.component.css
+++ b/src/app/apod/apod.component.css
@@ -25,6 +25,21 @@
 
   }
 
+  @media only screen and (min-width: 299px) and (max-width : 500px){
+    .imag {
+       
+        width: 100% !important;
+        height: 250px !important;
+        border-radius: 1px !important;
+    }
+   }
+
+
+
+
+
+
+
   .date{
     text-align: center;
     margin-top:25px;
