--- a/src/app/apod/apod.component.css
+++ b/src/app/apod/apod.component.css
@@ -20,7 +20,7 @@
   .imag{
     box-shadow: 1px 1px 5px 1px #6d6565;
     width: 100%;
-    height: 60vh;
+    height: auto;
     border-radius: 1px;
 
   }
@@ -29,7 +29,7 @@
     .imag {
        
         width: 100% !important;
-        height: 250px !important;
+        height: auto !important;
         border-radius: 1px !important;
     }
    }
